# Computational-Physics-Toolkit

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
docs/: VEC.md
include/: vec.h
src/: vec.c
tests/: test.c
